@@ -1,4 +1,10 @@
-2015-01-07  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
+2015-01-12  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
+
+        * Bug fix version 0.9.2 released
+        ================================
+
+        Use URL path informtion in GVOClient connection to Hub
+
 
         * Bug fix version 0.9.1 released
         ================================
